--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-dropzone": "^14.3.8",
     "react-router-dom": "^7.8.2",
     "reactflow": "^11.11.4",
+    "recharts": "^2.15.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12"
   },
